# DriveNCook

./: .gitignore  README.md
Doc/: Descriptif fonctionnel application C.docx  Diagramme_de_Gantt_Mission_3.mvdx  Matrice RACI.gsheet
QR_code/Information_to_QR_code/: CMakeLists.txt  qrFunctions.c  qrFunctions.h
QR_code/api_curl/: CMakeLists.txt  cpl.sh  curlFunction.c  curlFunction.h  main.c  message.txt  sender  upload  useful.h
QR_code/api_curl/libcurl/lib/: libcurl.la  libssh2.la
QR_code/api_curl/libcurl/lib/pkgconfig/: libcurl.pc
QR_code/builds/file_listener (server)/: listener
QR_code/builds/qrcode_reader (server)/: qrcode_reader
QR_code/builds/subscribe (client)/: configFile  drivencook_subscribe  launch.sh
QR_code/csv_to_png/: CMakeLists.txt  configFile.csv  main.c  qrFunctions.c  qrFunctions.h  qrcode.c
QR_code/drivencook_subscribe/: CMakeLists.txt  codecFunctions.c  codecFunctions.h  configFile  curlFunction.c  curlFunction.h  gtkFunctions.c  gtkFunctions.h  key.txt  key.txte  main.c  qrFunctions.c  qrFunctions.h  useful.c  useful.h  window.glade  window.glade~
QR_code/drivencook_subscribe/libcurl/lib/: libcurl.so.4.6.0  libssh2.so.1
QR_code/drivencook_subscribe/libcurl/lib/pkgconfig/: libssh2.pc
QR_code/file_listener/: CMakeLists.txt  fileListener.c  fileListener.h  main.c  useful.h
QR_code/qrcode_reader/: CMakeLists.txt  dBConnect.c  dBConnect.h  main.c  readerFunctions.c  readerFunctions.h  saveToDatabaseFunctions.c  saveToDatabaseFunctions.h  useful.c  useful.h
QR_code/qrcode_reader/libs/: quirc.c  quirc.h  quirc_internal.h
database/: script_v1.sql
database/Creation/: script_creation_v1.sql  script_creation_v2.sql  script_creation_v3.sql
database/Creation & Insertion/: drivencook_mysqldump.sql  drivencook_mysqldump_v2
database/Insertion/: drivencook_franchisee_stock.sql  drivencook_purchased_dish.sql  drivencook_sold_dish.sql  drivencook_user.sql
database/Insertion/V1/: drivencook_breakdown.sql  drivencook_dish.sql  drivencook_event.sql  drivencook_event_invited.sql  drivencook_fidelity_step.sql  drivencook_franchise_obligation.sql  drivencook_invoice.sql  drivencook_location.sql  drivencook_pseudo.sql  drivencook_sale.sql  (+5 more)
docs/: DESCRIPTIF_FONCTIONNEL_APPLICATIONS_C_V1.2_GROUPE_6.docx  DESCRIPTIF_FONCTIONNEL_WEB_V1_GROUPE_6.docx  audit_securite_groupe6_v1.docx  point_davancement_groupe6_v1.docx
docs/Gantt/: DIAGRAMME_DE_GANTT_PLANIFICATION_DES_TACHES_V1_GROUPE_6.mvdx
docs/budget/: DRIVE_AND_COOK_2020_budget.xlsx  budget_mission3_groupe6_v1.xlsx
docs/config EVE NG/: FAI.txt  R_DATACENTER.txt  R_WH_ANTONY_nat_only.txt  R_WH_CERGY_nat_only.txt  R_WH_PARIS.txt  R_WH_TORCY.txt  SRV_WEB.txt  S_WH_ANTONY.txt  S_WH_CERGY.txt  S_WH_PARIS.txt  S_WH_TORCY.txt  WH_ANTONY.txt  WH_CERGY.txt  WH_PARIS.txt  WH_TORCY.txt
docs/design/: charte_graphique_groupe_6_v1.docx
docs/documentation d'utilisation/: utilisation_application_C_groupe6_v1.docx  utilisation_application_Java_groupe6_v1.docx  utilisation_application_web_franchise_groupe6_v1.docx  utilisation_application_web_groupe6_v1.docx  ~$ilisation_application_web_groupe6_v1.docx
docs/functional_description/: descriptif_fonctionnel_application_mission2_groupe6_v1.docx  descriptif_fonctionnel_applications_c_groupe6_v1.docx  descriptif_fonctionnel_mission2_groupe6_v1.docx
docs/gantt/: Diagramme_de_Gantt_Projet_Annuel_groupe3_v1.mvdx
docs/logo/: logo_v0.psd
docs/raci/: raci_matrix_groupe6_v1.xlsx
drivencook/: .env.example  .gitignore  .phpstorm.meta.php  _ide_helper.php  _ide_helper_models.php  composer.json  package-lock.json  package.json
drivencook/config/: app.php  global.php  lostintranslation.php
drivencook/routes/: web.php
java_maven/: pom.xml
java_maven/release/: launch4j.xml
webGL/: PolygonCity_Texture_Skyline.tga  index.html
webGL/css/: bootstrap.css  style.css
webGL/js/: bootstrap.js  city_builder.js  functions.js  game.js  main.js
(+362 files in other folders)
